--- a/css/style.css
+++ b/css/style.css
@@ -493,7 +493,7 @@ img {
 
 .testing{
     width: 800px;
-    margin: 0 auto;
+    margin: 0 0 0 5%;
 }
 
 .prototype-section h3 {
@@ -501,13 +501,15 @@ img {
 }
 
 .prototype-section p {
-    text-align: center;
+    /* text-align: center; */
+	margin-left: 7%;
+	margin-right: 40%;
 }
 
 /* copetitve analysis */
 
 .competitive-section {
-    margin: 80px 0;
+    margin: 40px 0;
 }
 
 .competitive-section img{
@@ -650,6 +652,9 @@ img {
     font-size: 25px;
 }
 
+.f130 {
+	font-size: 130%;
+}
 
 /* media queries */
 
